# small-cap-screener

./: .gitignore  CLAUDE.md  LICENSE  README.md  SMALLCAP_SCREENER_PROMPT.md  pyproject.toml
edgar/: CLAUDE.md  fetcher.py  insider_parser.py  rate_limiter.py
edgar_client/: CLAUDE.md  fetcher.py  insider_parser.py  rate_limiter.py
src/: CLAUDE.md  cli.py  fundamentals.py  insider.py  momentum.py  output.py  pipeline.py  portfolio.py  scorer.py  universe.py  validate.py
tests/: CLAUDE.md  conftest.py
tests/e2e/: test_cli_commands.py  test_full_pipeline.py  test_portfolio_flow.py
tests/fixtures/: sample_form4.xml  sample_yfinance_info.json
tests/unit/: test_concurrency.py  test_fundamentals.py  test_insider.py  test_momentum.py  test_output.py  test_portfolio.py  test_scorer.py  test_universe.py
