[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallcap-screener"
version = "0.1.0"
description = "CLI-based small-cap stock screening pipeline"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "requests>=2.31",
    "rich>=13.0",
    "edgartools>=3.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "responses>=0.24",
    "pytest-mock>=3.12",
]

[project.scripts]
screener = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*", "edgar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
